src/test/deca/syntax/invalid/sansobjet/WrongEquals.deca
//WrongEquals.deca:5:15: no viable alternative at input '{'
//Description: test soustraction incorrecte
//Resultat: erreur ligne 6: il manque une parenthere )
{
    if (a == 1 {

    }
}
